--- a/css/index.css
+++ b/css/index.css
@@ -133,4 +133,187 @@ table {
 html,
 body {
   height: 100%;
+  font-family: 'Roboto Mono', 'monospace';
+  font-weight: 500;
+  font-style: norma;
+}
+/*** MY LESS CODE BEGINS HERE ***/
+/*** Variables ***/
+.myFont {
+  font-family: 'Roboto Mono', 'monospace';
+  font-weight: 500;
+  font-style: norma;
+}
+/*** Mixins ***/
+.border {
+  border-top: solid 6px #318EC0;
+}
+.header-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.make-responsive {
+  width: 100%;
+  height: auto;
+  min-width: 175px;
+}
+a {
+  color: #318EC0;
+}
+a a:hover {
+  color: #6D6D6D;
+}
+.fab {
+  color: #318EC0;
+  font-size: 2.5rem;
+}
+strong {
+  font-weight: bold;
+}
+p {
+  padding-bottom: 10px;
+}
+h1 {
+  font-size: 32px;
+  color: #318EC0;
+}
+.header-img {
+  border-radius: 50%;
+  width: 100%;
+  height: auto;
+  min-width: 175px;
+}
+nav {
+  border-top: solid 6px #318EC0;
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px;
+  background-color: #eee;
+  align-items: center;
+}
+nav a {
+  color: #fff;
+  text-decoration: none;
+  padding-left: 20px;
+  text-align: center;
+  padding: 14px;
+}
+nav a:hover {
+  text-decoration: overline;
+  color: rgba(255, 255, 255, 0.418);
+}
+.fixed-nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 50px;
+  background-color: #318EC0;
+}
+.container {
+  width: 60%;
+  padding: 25px;
+  padding-top: 0px;
+  margin: 0 auto;
+}
+header {
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+.header-text {
+  padding: 20px;
+  color: #6D6D6D;
+}
+.header-p {
+  display: flex;
+}
+.main {
+  justify-content: space-around;
+}
+.intro {
+  width: 100%;
+  margin: none;
+  padding-right: 25px;
+  margin-bottom: 100px;
+}
+.intro .skills {
+  width: 50%;
+  padding: 0;
+}
+progress {
+  border: none;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 20px;
+  background: crimson;
+}
+progress::-webkit-progress-value {
+  background: #318EC0;
+}
+progress::-moz-progress-bar {
+  background: #6D6D6D;
+}
+section.work {
+  margin-top: 30px;
+  margin-bottom: 100px;
+}
+table,
+th,
+td {
+  border: 1px solid #6D6D6D;
+  border-collapse: collapse;
+  padding: 15px;
+  text-align: left;
+  border-spacing: 5px;
+}
+.contact {
+  /* Style the submit button with a specific background color etc */
+  /* When moving the mouse over the submit button, add my secondary-color */
+}
+.contact nput[type=text],
+.contact select,
+.contact textarea {
+  width: 100%;
+  /* Full width */
+  padding: 12px;
+  /* Some padding */
+  border: 1px solid #6D6D6D;
+  /* Gray border */
+  border-radius: 4px;
+  /* Rounded borders */
+  box-sizing: border-box;
+  /* Make sure that padding and width stays in place */
+  margin-top: 6px;
+  /* Add a top margin */
+  margin-bottom: 16px;
+  /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */;
+}
+.contact input[type=submit] {
+  background-color: #318EC0;
+  color: white;
+  padding: 12px 20px;
+  margin-bottom: 25px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.contact input[type=submit]:hover {
+  background-color: #6D6D6D;
+}
+footer {
+  display: flex;
+  justify-content: center;
+}
+@media (max-width: 500px) {
+  padding: 10px;
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
