add lines and update some contents

--- a/less/index.less
+++ b/less/index.less
@@ -189,11 +189,11 @@ header {
 	justify-content: space-around;
 }
 
-.intro {
+.summary {
 	width: 100%;
 	margin: none;
 	padding-right: 25px;
-	margin-bottom: 100px;
+	margin-bottom: 50px;
 	
 	.skills {
 
